v.0.4 * fixed tests * fixed application.yml (added settings for profiles ) * refactoring entities
v.0.3
* fixed tests
* fixed repositories
- delete config class
+ add application.yml

v.0.2
* fixed all Models, including @ OneToMany / @ ManyToOne links
* renamed Order -> Renting, since the reserved words in MSQL, were the same
+ added test.properties file
+ added tests for all repositories

v.0.1
Project created and configured
+ implementing entity layer
+ implementing repository layer
+ implementing config
+ application properties file
+ test getAllBooks

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,10 @@
 spring:
+  config:
+    activate:
+      on-profile: test
   jpa:
     hibernate:
-      ddl-auto: none
+      ddl-auto: create
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL8Dialect
@@ -12,3 +15,22 @@ spring:
     platform: mysql
     username: root
     password: root
+
+---
+    spring:
+      config:
+        activate:
+          on-profile: prod
+      jpa:
+        hibernate:
+          ddl-auto: none
+        properties:
+          hibernate:
+            dialect: org.hibernate.dialect.MySQL8Dialect
+        database: MYSQL
+      datasource:
+        driver-class-name: com.mysql.cj.jdbc.Driver
+        url: jdbc:mysql://localhost:3306/library_application
+        platform: mysql
+        username: root
+        password: root
