--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,7 @@ spring:
     hibernate:
       ddl-auto: none
     properties:
+      hibernate.enable_lazy_load_no_trans: true
       hibernate:
         dialect: org.hibernate.dialect.MySQL8Dialect
     database: MYSQL
