--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,5 @@ build/
 ### VS Code ###
 .vscode/
 /src/test/java/rogachev7/library_application/CleanData.java
+/src/main/java/rogachev7/library_application/util/
+/src/main/java/rogachev7/library_application/controller/
