--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,27 +11,28 @@ spring:
         dialect: org.hibernate.dialect.MySQL8Dialect
     database: MYSQL
   datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
+    driverClassName: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/library_application
     platform: mysql
     username: root
     password: root
 
 ---
-    spring:
-      config:
-        activate:
-          on-profile: prod
-      jpa:
-        hibernate:
-          ddl-auto: none
-        properties:
-          hibernate:
-            dialect: org.hibernate.dialect.MySQL8Dialect
-        database: MYSQL
-      datasource:
-        driver-class-name: com.mysql.cj.jdbc.Driver
-        url: jdbc:mysql://localhost:3306/library_application
-        platform: mysql
-        username: root
-        password: root
+spring:
+  config:
+    activate:
+      on-profile: prod
+  jpa:
+    hibernate:
+      ddl-auto: none
+    properties:
+      hibernate.enable_lazy_load_no_trans: true
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL8Dialect
+    database: MYSQL
+  datasource:
+    driverClassName: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/library_application
+    platform: mysql
+    username: root
+    password: root
