v.0.8 + add AbstractEntity + add CommonRepository + add BaseCrudService

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@ build/
 /src/test/java/rogachev7/library_application/CleanData.java
 /src/main/java/rogachev7/library_application/util/
 /src/main/java/rogachev7/library_application/controller/
+/src/main/resources/static/
